...
      button.layer.borderColor = UIColor.yellow.cgColor
      button.layer.cornerRadius = 5
      button.widthAnchor.constraint(equalToConstant: 120).isActive = true
      return button
    }
    
    twitterButton = buttonWithTitle("Twitter")
    githubButton = buttonWithTitle("Github")
    rateButton = buttonWithTitle("Rate me")
    
    stackView = UIStackView(arrangedSubviews: [avatarImageView, handleLabel, twitterButton, githubButton, rateButton])
    stackView.translatesAutoresizingMaskIntoConstraints = false
    stackView.axis = .vertical
    stackView.alignment = .center
...
