...
            alertMessage += NSLocalizedString("break timer?", comment: "second part of alert message")
        case .procrastination:
            alertMessage += NSLocalizedString("procrastination?", comment: "second part of alert message")
        default:
            break
        }
        let alertController = UIAlertController(title: "Stop?", message: alertMessage, preferredStyle: .alert)
        
        let cancelAction = UIAlertAction(title: "Cancel", style: .cancel, handler: { action in
            print("\(action)")
        })
        alertController.addAction(cancelAction)
        
        let stopAction = UIAlertAction(title: "Stop", style: .default, handler: { action in
            print("\(action)")
            //      if self.currentType == .Work || self.workPeriods.count > 0 {
            //        self.workPeriods.removeLast()
            //      }
            self.startTimer(withType: .idle)
        })
...
