...
    
    workInputHostView = InputHostView(frame: CGRect.zero)
    workInputHostView.nameLabel.text = NSLocalizedString("Work duration", comment: "Settings name for the work duration")
    workInputHostView.tag = 0
    
    breakInputHostView = InputHostView(frame: CGRect.zero)
    breakInputHostView.nameLabel.text = NSLocalizedString("Break duration", comment: "Settings name for the break duration")
    breakInputHostView.tag = 1
    
    pickerView = {
      let pickerView = UIPickerView()
      pickerView.translatesAutoresizingMaskIntoConstraints = false
      pickerView.showsSelectionIndicator = true
...
